[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherling"
version = "0.1.0"
description = "AetherForge – the platform for creating, editing, and deploying self-evolving AI agents (Aetherlings)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "pinecone>=3.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aetherling*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
